# AlgoExpert/Arrays/Easy/CMakeLists.txt

option(NonConstructibleChange_discover_tests "Add problem tests to a workflow" OFF)
add_subdirectory(non-constructible-change)

option(SortedSquaredArray_discover_tests "Add problem tests to a workflow" OFF)
add_subdirectory(sorted-squared-array)

option(TournamentWinner_discover_tests "Add problem tests to a workflow" OFF)
add_subdirectory(tournament-winner)

option(TransposeMatrix_discover_tests "Add problem tests to a workflow" OFF)
add_subdirectory(transpose-matrix)

option(TwoNumberSum_discover_tests "Add problem tests to a workflow" OFF)
add_subdirectory(two-number-sum)

option(ValidateSubsequence_discover_tests "Add problem tests to a workflow" OFF)
add_subdirectory(validate-subsequence)
