# AlgoExpert/Arrays/Hard/CMakeLists.txt

option(CountSquares_discover_tests "Add problem tests to a workflow" OFF)
add_subdirectory(count-squares)

option(FourNumberSum_discover_tests "Add problem tests to a workflow" OFF)
add_subdirectory(four-number-sum)

option(LargestRange_discover_tests "Add problem tests to a workflow" OFF)
add_subdirectory(largest-range)

option(LongestSubarrayWithSum_discover_tests "Add problem tests to a workflow" OFF)
add_subdirectory(longest-subarray-with-sum)

option(MinRewards_discover_tests "Add problem tests to a workflow" OFF)
add_subdirectory(min-rewards)

option(SubarraySort_discover_tests "Add problem tests to a workflow" OFF)
add_subdirectory(subarray-sort)

option(KnightConnection_discover_tests "Add problem tests to a workflow" OFF)
add_subdirectory(knight-connection)

option(ZigzagTraverse_discover_tests "Add problem tests to a workflow" OFF)
add_subdirectory(zigzag-traverse)
