# AlgoExpert/Arrays/Medium/CMakeLists.txt

option(ArrayOfProducts_discover_tests "Add problem tests to a workflow" OFF)
add_subdirectory(array-of-products)

option(BestSeat_discover_tests "Add problem tests to a workflow" OFF)
add_subdirectory(best-seat)

option(FirstDuplicateValue_discover_tests "Add problem tests to a workflow" OFF)
add_subdirectory(first-duplicate-value)

option(LongestPeak_discover_tests "Add problem tests to a workflow" OFF)
add_subdirectory(longest-peak)

option(MajorityElement_discover_tests "Add problem tests to a workflow" OFF)
add_subdirectory(majority-element)

option(MergeOverlappingIntervals_discover_tests "Add problem tests to a workflow" OFF)
add_subdirectory(merge-overlapping-intervals)

option(MissingNumbers_discover_tests "Add problem tests to a workflow" OFF)
add_subdirectory(missingNumbers)

option(MonotonicArray_discover_tests "Add problem tests to a workflow" OFF)
add_subdirectory(monotonic-array)

option(MoveElementToEnd_discover_tests "Add problem tests to a workflow" OFF)
add_subdirectory(move-element-to-end)

option(SmallestDifference_discover_tests "Add problem tests to a workflow" OFF)
add_subdirectory(smallest-difference)

option(SpiralTraverse_discover_tests "Add problem tests to a workflow" OFF)
add_subdirectory(spiral-traverse)

option(SweetAndSavory_discover_tests "Add problem tests to a workflow" OFF)
add_subdirectory(sweet-and-savory)

option(ThreeNumberSum_discover_tests "Add problem tests to a workflow" OFF)
add_subdirectory(three-number-sum)

option(ZeroSumSubarray_discover_tests "Add problem tests to a workflow" OFF)
add_subdirectory(zero-sum-subarray)
