# AlgoExpert/DynamicProgramming/Hard/CMakeLists.txt

option(MaxSumIncreasingSubsequence_discover_tests "Add problem tests to a workflow" OFF)
add_subdirectory(max-sum-increasing-subsequence)

option(LongestCommonSubsequence_discover_tests "Add problem tests to a workflow" ON)
add_subdirectory(longest-common-subsequence)
