# AlgoExpert/LinkedLists/Medium/CMakeLists.txt

option(LinkedListConstruction_discover_tests "Add problem tests to a workflow" OFF)
add_subdirectory(linked-list-construction)

option(RemoveKthNodeFromEnd_discover_tests "Add problem tests to a workflow" ON)
add_subdirectory(remove-kth-node-from-end)
