# AlgoExpert/Recursion/VeryHard/CMakeLists.txt


option(NumberOfBinaryTreeTopologies_discover_tests "Add problem tests to a workflow" OFF)
add_subdirectory(number-of-binary-tree-topologies)

option(NonAttackingQueens_discover_tests "Add problem tests to a workflow" OFF)
add_subdirectory(non-attacking-queens)
