# AlgoExpert/Strings/Hard/CMakeLists.txt


option(LongestSubstringWithoutDuplication_discover_tests "Add problem tests to a workflow" OFF)
add_subdirectory(longest-substring-without-duplication)

option(UnderscorifySubstring_discover_tests "Add problem tests to a workflow" OFF)
add_subdirectory(underscorify-substring)

option(PatternMatcher_discover_tests "Add problem tests to a workflow" OFF)
add_subdirectory(pattern-matcher)
