# AlgoExpert/Strings/VeryHard/CMakeLists.txt


option(SmallestSubstringContaining_discover_tests "Add problem tests to a workflow" OFF)
add_subdirectory(smallest-substring-containing)

option(LongestBalancedSubstring_discover_tests "Add problem tests to a workflow" OFF)
add_subdirectory(longest-balanced-substring)
